objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Loss_Reason__c</fullName>
        <inlineHelpText>Reason this lead is Unqualified</inlineHelpText>
        <label>Lead Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Loss_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Website__c</fullName>
        <label>Personal Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subscription_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribed to all</description>
        <label>Subscription - All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Team_Size__c</fullName>
        <label>Survey Team Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>my team</fullName>
                </value>
                <value>
                    <fullName>my whole company</fullName>
                </value>
                <value>
                    <fullName>several teams</fullName>
                </value>
                <value>
                    <fullName>myself only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Request_DT__c</fullName>
        <description>Datetime when user requests a trial</description>
        <label>Trial Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>account6QA6sense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The 6QA status of the account for the product.

The values are either:
1 = 6QA
0= Not 6QA</description>
        <label>6sense Account 6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_utm_content_c__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Time_Zone__c</fullName>
        <label>Company Time Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Created Date/Time for reporting</inlineHelpText>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Action__c</fullName>
        <inlineHelpText>Call to action for LeanData Routing, set to blank after routing is completed</inlineHelpText>
        <label>LD Routing Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_Contacted_Date__c</fullName>
        <label>LS - Contacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_Number__c</fullName>
        <formula>if(ISPICKVAL( Status , &quot;New&quot;),1.0,
if(ISPICKVAL( Status , &quot;Qualified&quot;),5.2, 
value(left(text( Status ),3))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Stage (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_City__c</fullName>
        <label>[MKT] Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to separate the email marketing opt outs that happen in marketo only. This is a separate field from the email opt out that outreach is using.</description>
        <inlineHelpText>Marketo only opt out. This can only be change by unsubscribing.</inlineHelpText>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User has opted in newsletter</description>
        <label>Newsletter Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Request_DT__c</fullName>
        <label>Portal Request DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pref_60_Day_Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pref 60-Day Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Blog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Blog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Usage_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Usage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Lead Score (from Marketo)</description>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi_utm_campaign_c__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Matched_Account_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asked_for_discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked for discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Indexed_At__c</fullName>
        <label>Company Indexed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company_State_Code__c</fullName>
        <label>Company State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_UTC_Offset__c</fullName>
        <label>Company UTC Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribers who would like to receive emails when one of our integrations go live.</description>
        <label>Integration Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_State__c</fullName>
        <label>[MKT] Inferred State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_created_user__c</fullName>
        <label>Notes created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_External_ID__c</fullName>
        <label>Person External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Created_DT__c</fullName>
        <description>Datetime when a user creates the project or is invited to the project</description>
        <label>Project Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Roadmap_shown_user__c</fullName>
        <label>Roadmap shown user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDR_Routing_Reason__c</fullName>
        <label>SDR Routing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starter_Request_DT__c</fullName>
        <label>Starter Request DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tmp_cb_CompanyName__c</fullName>
        <label>tmp_cb_CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Email_Provider_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[CB] Email Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_External_ID__c</fullName>
        <label>Company External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Postal_Code__c</fullName>
        <label>Company Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Sub_Premise__c</fullName>
        <label>Company Sub Premise</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Behavior_Score__c</fullName>
        <label>Behavior Score 2022</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Allowed_to_MQL__c</fullName>
        <label>Date Allowed to MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_created_user__c</fullName>
        <label>Driver created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handraise_Submitted__c</fullName>
        <label>Handraise Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LD_Last_Routed_Days__c</fullName>
        <formula>If( IsNull( LD_Routing_Date__c  ),9999,
  Now()- LD_Routing_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LD Last Routed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LD_Re_Trigger_Field__c</fullName>
        <label>[LD] Re-Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Previous_Company__c</fullName>
        <label>LG - Previous Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_MQL_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest MQL Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Latest MQL Campaign)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_created_space__c</fullName>
        <label>Notes created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productboard_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productboard Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roadmap_shown_space__c</fullName>
        <label>Roadmap shown space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Last_Updated__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>Date Lead Status Last Updated</inlineHelpText>
        <label>Status Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Company_Size__c</fullName>
        <label>Survey Product Manager Team Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 3</fullName>
                </value>
                <value>
                    <fullName>4 - 10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Product_Type__c</fullName>
        <label>Survey Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a digital product</fullName>
                </value>
                <value>
                    <fullName>a non-digital product</fullName>
                </value>
                <value>
                    <fullName>agency projects</fullName>
                </value>
                <value>
                    <fullName>an internal tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Activation_DT__c</fullName>
        <label>Trial Activation DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Functional_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Country_Code__c</fullName>
        <label>Company Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_created_space__c</fullName>
        <label>Driver created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Editors_invited_user__c</fullName>
        <label>Editors invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_created_user__c</fullName>
        <label>Feature created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Date__c</fullName>
        <label>Initial Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LD_Not_Routed_Reason__c</fullName>
        <label>LD Not Routed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Date__c</fullName>
        <label>Latest Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Lead__c</fullName>
        <formula>Latest_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Campaign (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Type__c</fullName>
        <inlineHelpText>Latest Campaign Type</inlineHelpText>
        <label>Latest Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_Country__c</fullName>
        <label>[MKT] Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Trial_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if record was created by Marketo Try Now Form</description>
        <label>Marketo Trial Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Prospect_ID__c</fullName>
        <label>Outreach Prospect ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pipeline_Opportunity__c</fullName>
        <label>Pipeline Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_Activation_DT__c</fullName>
        <label>Portal Activation DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_created_user__c</fullName>
        <label>Release created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_printed_user__c</fullName>
        <label>Roadmap printed user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_product_team__c</fullName>
        <label>Size of product team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snippet_created_user__c</fullName>
        <label>Snippet created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Created_Date__c</fullName>
        <label>[TS] Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Created_Time__c</fullName>
        <label>[TS] Lead Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>View_customized_user__c</fullName>
        <label>View customized user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewers_invited_user__c</fullName>
        <label>Viewers invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadProfileFit6sense__c</fullName>
        <description>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Lead Profile Fit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadUpdateDate6sense__c</fullName>
        <description>The latest update date and time when 6sense Scores were updated.</description>
        <label>6sense Lead Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Street_Number__c</fullName>
        <label>Company Street Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status_Number__c</fullName>
        <formula>if(ISPICKVAL(  Contact_Status__c  , &quot;New&quot;),1.0, 
if(ISPICKVAL(  Contact_Status__c  , &quot;&quot;),1.0,
if(ISPICKVAL( Contact_Status__c , &quot;Qualified&quot;),5.2,
value(left(text( Contact_Status__c ),3))

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status (#)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editors_invited_space__c</fullName>
        <label>Editors invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_created_space__c</fullName>
        <label>Feature created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Sequence_Date__c</fullName>
        <label>Initial Sequence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Owner__c</fullName>
        <formula>LeanData__Reporting_Matched_Account__r.Owner.Full_Name__c</formula>
        <inlineHelpText>Matched Account Owner Name</inlineHelpText>
        <label>Matched Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Account_Employees__c</fullName>
        <formula>IF(LeanData__Reporting_Matched_Account__r.Bad_Account__c,NumberOfEmployees,
IF(LeanData__Reporting_Matched_Account__r.Id=&quot;&quot;,NumberOfEmployees,

 LeanData__Reporting_Matched_Account__r.Max_Employees__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Max Employees between Match account and Leads # employees</inlineHelpText>
        <label>Max Account Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_created_space__c</fullName>
        <label>Release created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_printed_space__c</fullName>
        <label>Roadmap printed space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snippet_created_space__c</fullName>
        <label>Snippet created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starter_Activation_DT__c</fullName>
        <label>Starter Activation DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>View_customized_space__c</fullName>
        <label>View customized space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewers_invited_space__c</fullName>
        <label>Viewers invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>leadIntentScore6sense__c</fullName>
        <description>A measure, between 0 and 100, of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Lead Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>registration_source_c__c</fullName>
        <label>Registration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deletion_Consideration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marketing use</inlineHelpText>
        <label>Deletion Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Status__c</fullName>
        <label>Latest Campaign Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Handraiser_Date__c</fullName>
        <description>Updated from Marketo, latest date this lead did a handraiser activity</description>
        <label>Latest Handraiser Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Matched_Account_SDR_ID__c</fullName>
        <formula>IF(LeanData__Reporting_Matched_Account__r.Owner.SDR__r.IsActive,
LeanData__Reporting_Matched_Account__r.Owner.SDR__r.Id,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account Owner&apos;s SDR ID</inlineHelpText>
        <label>Matched Account SDR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Status__c</fullName>
        <formula>LeanData__Reporting_Matched_Account__r.Customer_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account customer Status</inlineHelpText>
        <label>Matched Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_card_added_user__c</fullName>
        <label>Portal card added user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Round_Robin_Type__c</fullName>
        <formula>IF(IsPickVal(Region__c ,&quot;EMEA&quot;),&quot;EMEA&quot;,&quot;ROTW&quot;) &amp; 
IF( NumberOfEmployees &gt; 499,&quot;-Sol&quot;,
IF( NumberOfEmployees &gt; 49,&quot;-Vel&quot;,&quot;-Gro&quot;))</formula>
        <inlineHelpText>Determined which Round Robin Pool to Enter</inlineHelpText>
        <label>Sales Round Robin Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadProfileScore6sense__c</fullName>
        <description>A measure, between 0 and 100, of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Lead Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_New_Lead_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert - New Lead Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_filter_used_user__c</fullName>
        <label>Column filter used user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Category_Sector__c</fullName>
        <label>[CB] Company Category Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Expiration_Date__c</fullName>
        <label>Consent Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>O_Current_Sequence_Name__c</fullName>
        <label>O Current Sequence Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_card_added_space__c</fullName>
        <label>Portal card added space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_tab_created_user__c</fullName>
        <label>Portal tab created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Assigned_to_SDR__c</fullName>
        <label>[TS] Lead Assigned to SDR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_Industry__c</fullName>
        <label>Industry [PB]</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>account6QAEndDate6sense__c</fullName>
        <description>The date the account was disqualified from 6QA status (YYYY-MM-DD).</description>
        <label>6sense Account 6QA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense__c</fullName>
        <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Account Profile Fit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Date the person was acquired (From Marketo)</description>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asked_about_Scaling_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked about Scaling plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_view_switched_user__c</fullName>
        <label>Board view switched user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column_filter_used_space__c</fullName>
        <label>Column filter used space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadGenius_Campaign_Name__c</fullName>
        <label>LeadGenius Campaign Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_MQL_Date__c</fullName>
        <label>Lifecycle Stage - First MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_SAL_Date__c</fullName>
        <label>Lifecycle Stage - SAL DAte</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_SQL_Date__c</fullName>
        <label>Lifecycle Stage - SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Owner_ID__c</fullName>
        <formula>LeanData__Reporting_Matched_Account__r.Owner.Id</formula>
        <inlineHelpText>Matched Account Owner User ID</inlineHelpText>
        <label>Matched Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_tab_created_space__c</fullName>
        <label>Portal tab created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_Seniority__c</fullName>
        <label>Seniority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Seniority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense__c</fullName>
        <description>The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities.

Target - The buyer may not realize a problem exists, but may fit within the seller’s TAM. 

Awareness - The buyer realizes they have a problem. The buyer is doing educational research to more clearly understand, frame, and identify their problem. 

Consideration - The buyer defines their problem and researches options to solve it. The buyer is researching all of the available options to solve the defined problem. 

Decision - The buyer chooses a solution. The buyer is narrowing a list of potential vendors to ultimately make a purchase decision. 

Purchase - The buyer commits to a specific solution and justifies the reasons for the purchase.</description>
        <label>6sense Account Buying Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense__c</fullName>
        <description>A measure, between 0 and 100, of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</description>
        <label>6sense Account Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>